# flow2d-rs

./: Cargo.toml  README.md
examples/gui/: grid.rs  main.rs
src/: cell.rs  grid.rs  lib.rs  main.rs  presets.rs  simulation.rs  space.rs  space_domain.rs  space_time_domain.rs
